<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating">Floating note</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="remove_recent">Remove from latest</string>
    <string name="storage_preference">Main storage</string>
    <string name="recent">Latest</string>
    <string name="browser">Browser</string>
    <string name="parent_folder">Parent folder</string>
    <string name="toast_on_minimize">Click on me to maximize</string>
    <string name="loading">Loading</string>
    <string name="add_note">Add note</string>
    <string name="add_folder">Add folder</string>
    <string name="name">Name</string>
    <string name="new_folder_name">New folder</string>
    <string name="storage_preference_details" />
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="general_header">General</string>
    <string name="paiement_header">Payment</string>
    <string name="donate_liberapay">Donate (Liberapay)</string>
    <string name="donate_paypal">Donate (PayPal)</string>
    <string name="donate">Donate</string>
    <string name="report_bug_or_propose">Bug / feature</string>
    <string name="report_bug_or_propose_description">Report a bug or ask for a feature</string>
    <string name="delete_confirm">Are you sure you want to delete this ?</string>
    <string name="wrong_password">Wrong pin code: default 0000</string>
    <string name="checking_password">Verification...</string>
    <string name="password_on_minimize">Pin code on minimize</string>
    <string name="pref_set_password">Set password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Current password</string>
    <string name="empty_message">No note found\nPlease, create a new note with + button</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_help_authorize_floating_window">
        HelpAuthorizeFloatingWindowActivity
    </string>
    <string name="authorize">Authorize</string>
    <string name="authorize_description">Carnet needs special authorization to display as a window. Please, provide it by enabling "superposition in front of other apps"</string>
    <string name="authorisation_issue">Authorization issue</string>
    <string name="error">Error</string>
    <string name="error_permission_storage">Because of new android permission system, we need storage permission to save notes on your device (this will be used to save texts on both your internal storage and sdcard).</string>
    <string name="allow">Allow</string>
    <string name="exit">Exit</string>
    <string name="unable_to_rename_use">Unable to rename a document while being used</string>
    <string name="unable_to_rename_invalid_name">Note contains invalid characters</string>
    <string name="unable_to_delete_use">Unable to delete an opened document</string>
    <string name="add_screenshot">Add screenshot to note ?</string>
    <string name="please_wait_update">Please wait while your notes are being updated</string>
    <string name="write_error">Error while saving text</string>
    <string name="sync_cloud_preference">Sync with cloud storage</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="move">Move</string>
    <string name="paste">Paste</string>
    <string name="paste_how_to">Browse to the folder you want to move to, then select paste</string>
    <string name="file_operation_in_progress">File operation</string>
    <string name="please_wait">Please wait</string>
    <string name="new_keyword">New Keyword</string>
    <string name="title_activity_account_config">Account Configuration</string>
    <string name="remote_folder">Remote folder</string>
    <string name="keywords">Keywords</string>
    <string name="sync_intro_title">Sync Carnet</string>
    <string name="sync_intro_text">Carnet supports synchronisation with NextCloud, don\'t forget to download Desktop version to find your notes back on your computer. Carnet is also available online on the NextCloud App Store.</string>
    <string name="google_drive">Google Drive</string>
    <string name="sync_intro_gdrive_text">Easy, most of you already have a gmail address, not OpenSource</string>
    <string name="sync_select_nextcloud_text">Carnet is compatible with every NextCloud providers. Please, find and register with a provider (some are available for free)</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome !</string>
    <string name="welcome_subtitle">Let\'s discover Carnet</string>
    <string name="next">Next</string>
    <string name="app_restart">The app will now restart</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="say_hi">Say hi !</string>
    <string name="say_hi_subtitle">You can help me know how many people are using this app by pressing \"Say Hi !\" button \n:)</string>
    <string name="say_hi_subtitle2">I will understand the app was downloaded once more (not mandatory at all but helpful).</string>
    <string name="not_available_on_fdroid">Not available on fdroid</string>
    <string name="desktop_version">Desktop Version</string>
    <string name="sync_intro_text_carnet_instance">Carnet can automatically backup your notes online.\nChoose a Carnet provider to be able to edit them on your web browser, from both your mobile phone and your computer</string>
    <string name="doesnt_accept_new_users">Doesn\'t accept new users</string>
    <string name="open_for_registrations">Open for registrations</string>
    <string name="reliability">Reliability</string>
    <string name="updating">Updating...</string>
    <string name="theme">Theme</string>
    <string name="blue">Blue</string>
    <string name="dark">Dark</string>
    <string name="donation_ask">This application was created for free, please, consider making a donation</string>
    <string name="rate_ask">Please, if you like this app, give us 5 stars :)</string>
    <string name="rate">Rate it</string>
    <string name="first_start">First start, please wait</string>
    <string name="sync">Sync</string>
    <string name="change_credentials">Change Credentials</string>
    <string name="carnet_doesnt_spy">Carnet doesn\'t spy on you and contains no ads</string>
    <string name="carnet_open">Carnet is free and open source</string>
    <string name="carnet_note_taking_app">Carnet is a versatile note application</string>
    <string name="nextcloud_connect">Connect with NextCloud</string>
    <string name="other_sync_options">Other sync options</string>
    <string name="fake_note_1">These fake notes will disappear as soon as you create a new note by selecting the bottom right button</string>
    <string name="fake_note_2">Choose note/text colors, add keywords</string>
    <string name="fake_note_3">Rate your notes or texts</string>
    <string name="fake_note_4">Sync with your devices</string>
    <string name="fake_note_5">Format your notes and documents, add pictures and audio records</string>
    <string name="fake_notes_warning">Fake notes are not editable</string>
    <string name="fake_note_6">Add ToDo-Lists and URLs</string>
    <string name="fake_note_todo_item_1">Try Carnet</string>
    <string name="fake_note_todo_item_2">Share Carnet</string>
    <string name="changelog">Changelog</string>
    <string name="restore_recent">Restore to latest</string>
    <string name="sort_reversed">Reversed order</string>
    <string name="sort_default">Default</string>
    <string name="sort_creation_date">Creation date</string>
    <string name="sort_modification_date">Modification date</string>
    <string name="sort_custom_date">Custom date</string>
    <string name="system_header">System</string>
    <string name="debug_log">Enable debug log</string>
    <string name="faster_editor_load">Faster editor load (experimental)</string>
    <string name="reminder">Reminder</string>
    <string name="create_note">Create a note</string>
    <string name="beta_feature">This is still a beta feature and has to be used carefully</string>
    <string name="warning_sync_cloud">Do not select any folders with non Carnet files. Selecting NextCloud/ownCloud root folder will sync your whole cloud to your phone.</string>
    <string name="start_with_browser_view">Start with browser view</string>
    <string name="one_minute">1 minute</string>
    <string name="two_minutes">2 minutes</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="six_hours">6 hours</string>
    <string name="once_a_day">Once a day</string>
    <string name="disabled">Disabled</string>
    <string name="twelve_hours">12 hours</string>
    <string name="values_below_15_battery">Values below 15 might drain the battery</string>
    <string name="sync_frequency">Sync frequency</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="battery_optimization_subtitle">To be able to sync in background, battery optimization has to be disabled for Carnet</string>
    <string name="battery_optimization_subtitle2">On next screen, allow carnet to ignore optimizations</string>
    <string name="battery_optimization_help">Need more help ? Click here</string>
    <string name="disable_optimization">Disable optimization</string>
    <string name="audio_player">Audio Player</string>
    <string name="pause">Pause</string>
    <string name="black">Black</string>
    <string name="create_home_shortcut">Create home shortcut</string>
    <string name="display_grid">Grid</string>
    <string name="display_line">Line</string>
    <string name="dialog_text">Sorry, Carnet has crashed. Please, send a report to the developers.</string>
    <string name="dialog_comment">You can add a comment here</string>
    <string name="display_more">Display more</string>
    <string name="display_less">Display less</string>
    <string name="importer">Import</string>
    <string name="importer_beta">Import (Beta)</string>
    <string name="use_it_with_caution">Use it with caution</string>
    <string name="multiple_accounts_warning">Having multiple cloud accounts can lead to conflicts, please use only one main cloud account and delete others !\nSorry for the inconvenience...</string>
    <string name="recording">Recording</string>
    <string name="encoding">Encoding</string>
    <string name="stop">Stop</string>
    <string name="exporting">Exporting…
\nPlease wait</string>
    <string name="export">Export (beta)</string>
    <string name="small_quality">Small</string>
    <string name="medium_quality">Medium</string>
    <string name="original_quality">Original</string>
    <string name="photo_quality">Photo quality</string>
    <string name="create_note_as_folder">Create notes as folder (beta, don\'t use it)</string>
    <string name="add_widget">Add widget</string>
    <string name="auto">Auto</string>
    <string name="use_new_editor">Use new markdown editor</string>
    <string name="refresh_editor">Refresh Editor</string>
    <string name="refresh_editor_summary">Could be useful if the editor is not loading</string>
</resources>
