<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"

    android:layout_height="match_parent">
    <TextView
        android:padding="10dp"
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_intro_title"
        android:textSize="40dp"
        style="@style/Base.TextAppearance.AppCompat.Headline"/>
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/sync_intro_text_carnet_instance" />
    <ListView
        android:layout_weight="0.5"
        android:id="@+id/listView"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    </ListView>
    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_sync_options"
        android:background="@null"
        android:onClick="next"
        android:layout_gravity="right"
        android:layout_margin="0dp"
        android:layout_alignParentBottom="true"/>
</LinearLayout>