<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"

        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="40dp" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_below="@+id/textView"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:background="@null"
        android:onClick="next"
        android:layout_alignParentRight="true"
        android:layout_margin="0dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
